# aoc-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: ci.yml
src/aoc_py/: cli.py
src/aoc_py/year_2025/: day_01.py
tests/: test_cli.py
tests/year_2025/: test_day_01.py
