[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-py"
dynamic = ["version"]
description = "My AdventOfCode solution written in Python"
authors = [
    { name = "tarnished-dodo", email = "nico.aeberhard@gmx.net" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["click"]

[project.optional-dependencies]
tests = ["pytest"]
lint = ["ruff"]
typecheck = ["mypy"]

[project.scripts]
aoc-py = "aoc_py.cli:menu"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
